SBOM-1045 Simplify processing SBOM validation errors (#12649)